gcc-14.2.0/gcc/testsuite/gm2/iso/pass/constructor1.mod
version https://git-lfs.github.com/spec/v1
oid sha256:7f95be76ada68cb2dd8ef4fbbe5d390c505464a792be66ba9110078f8e8338d1
size 952
