gcc-14.2.0/gcc/testsuite/gm2/iso/fail/badassignment.mod
version https://git-lfs.github.com/spec/v1
oid sha256:c779d22641c6dc1f6e4bfc7012e90f2602b5b44b5361cfdd2dae76603fc44998
size 225
